--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -1,4 +1,5 @@
 $container: 134rem;
+$headerContainer: 144rem;
 $headerBreak: 62.5;
 
 $sm: 35.5;
@@ -13,6 +14,10 @@ $c1: #fff;
 $c2: #000;
 $c3: #06B2DD;
 $c4: #B6CCCC;
+$c5: #f7f8f8;
+$c6: #0D2C54;
+$c7: #B6CDCD;
+$c8: #fd425a;
 
 
 
