new project window modal

--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -10,6 +10,8 @@ $lineheight: 1.6666;
 
 $padMob: 4%;
 
+$gr1: linear-gradient(-225deg, #06408E 0%, #1C78BF 100%);
+
 $c1: #fff;
 $c2: #000;
 $c3: #06B2DD;
@@ -18,6 +20,9 @@ $c5: #f7f8f8;
 $c6: #0D2C54;
 $c7: #B6CDCD;
 $c8: #fd425a;
-
+$c9: #85929F;
+$c10: #68DF0B;
+$c11: #06B2DD;
+$c12: #1EC4EE;
 
 
