--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,9 +5,13 @@
 
 @import 'global/header';
 @import 'global/nav';
+@import 'global/inputs';
+@import 'global/btn';
 
 @import 'components/dashboard';
 @import 'components/card';
+@import 'components/new-project';
+@import 'components/user-list';
 
 
 
