--- a/src/scss/_default.scss
+++ b/src/scss/_default.scss
@@ -156,6 +156,22 @@ ul {
     height: 100%;
 }
 
+.modal {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: rgba($c6,.7);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    overflow: scroll;
+    &--hidden {
+        display: none;
+    }
+}
+
 @media(min-width: $sm * 1em) {
     .container {
         padding: 0 4%;
