--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -11,6 +11,7 @@ $lineheight: 1.6666;
 $padMob: 4%;
 
 $gr1: linear-gradient(-225deg, #06408E 0%, #1C78BF 100%);
+$bs1: 0 30px 40px 0 rgba(6,21,41,0.12);
 
 $c1: #fff;
 $c2: #000;
