--- a/src/scss/components/_new-project.scss
+++ b/src/scss/components/_new-project.scss
@@ -155,6 +155,7 @@
         }
         &__label {
             text-transform: none;
+            color: $c6;
             &:first-of-type {
                 border-top-right-radius: 0;
                 border-bottom-right-radius: 0;
