--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -12,6 +12,8 @@
 @import 'components/card';
 @import 'components/new-project';
 @import 'components/user-list';
+@import 'components/modal-general';
+@import 'components/context-menu';
 
 
 
