--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -1,31 +1,57 @@
 .card {
+    $this: &;
     background-image: $gr1;
     color: $c1;
+    border-radius: .3rem;
+
+    &--empty {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 2rem 3rem;
+        background: $c1;
+        color: $c11;
+        font-size: 1.8rem;
+        box-shadow: $bs1;
+    }
+
+    &--standalone {
+        margin: auto !important;
+        float: none !important;
+        min-height: 24rem;
+        width: 52rem;
+        max-width: 100%;        
+    }
 
     &__header {
         padding: 2.4rem 3rem;
         position: relative;
-        z-index: 0;
+        // z-index: 0;
         &__bg {
+            // display: none;
             background-image: url(../img/code.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             position: absolute;
             width: 100%;
             height: 100%;
-            z-index: -1;
+            // z-index: -1;
             top: 0;
             left: 0;
             opacity: .5;
         }
         &__top {
+            position: relative;
             display: flex;
             align-items: baseline;
             justify-content: space-between;
         }
         &__settings {
             width: 1.6rem;
+            min-width: 1.6rem;
             height: 1.6rem;
+            min-height: 1.6rem;
+            margin-left: 1rem;
             background-image: url(../img/settings.svg);
             background-size: cover;
             background-repeat: no-repeat;
@@ -37,6 +63,34 @@
         &__subtitle {
             color: $c4;
             margin-bottom: 0;
+            font-weight: 400;
+            position: relative;
+        }
+        &__menu {
+            position: absolute;
+            z-index: 1;
+            right: 2rem;
+            top: 6rem;
+            transform: translateY(20px);
+            visibility: hidden;
+            opacity: 0;
+            transition: all .4s;
+            &--visible {
+                opacity: 1;
+                visibility: visible;
+                transform: translateY(0);
+            }
+            &:before {
+                content: '';
+                position: absolute;
+                right: 1.25rem;
+                top: -5px;
+                width: 0;
+                height: 0;
+                border-style: solid;
+                border-width: 0 5px 5px 5px;
+                border-color: transparent transparent $c1 transparent;
+            }
         }
     }
     &__main {
@@ -79,4 +133,24 @@
             }
         }
     }
-}
+
+    @media(min-width: $lg * 1em) {
+        // move contextual menu to the left except for every third card
+        &:not(:nth-child(3n+3)) {
+            #{$this}__header {
+                &__menu {
+                    right: 5rem;
+                    transform: translateY(20px) translateX(100%);
+                    &--visible {
+                        transform: translateY(0) translateX(100%);
+                    }
+                    &:before {
+                        right: auto;
+                        left: .75rem;
+                        top: -5px;                    
+                    }
+                }
+            }
+        }
+    }
+ }
