--- a/src/scss/components/_dashboard.scss
+++ b/src/scss/components/_dashboard.scss
@@ -1,5 +1,25 @@
 .dashboard {
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
     &__card {
-        lost-column: 1/3 auto 4rem;
+        lost-column: 1;
+        margin-bottom: 4rem;
+        &:not(:last-child) {
+        }
+    }
+
+    @media(min-width: $md * 1em) {
+        &__card {
+            lost-column: 1/2 auto 4rem;
+        }        
+    }
+
+    @media(min-width: $lg * 1em) {
+        &__card {
+            lost-column: 1/3 auto 4rem;
+        }        
     }
 }
