--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -12,6 +12,7 @@ $padMob: 4%;
 
 $gr1: linear-gradient(-225deg, #06408E 0%, #1C78BF 100%);
 $bs1: 0 30px 40px 0 rgba(6,21,41,0.12);
+$bs2: 0 1px 1px 0 rgba(0,0,0,0.12);
 
 $c1: #fff;
 $c2: #000;
