--- a/src/scss/components/_modal-general.scss
+++ b/src/scss/components/_modal-general.scss
@@ -3,6 +3,12 @@
     border-radius: .3rem;
     padding: 10rem 3rem;
     position: relative;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    width: 50rem;
+    max-width: 100%;
 
     &__close {
         display: block;
@@ -22,6 +28,25 @@
         color: $c6;
         text-align: center;
         margin-bottom: .25em;
+        &--mb {
+            margin-bottom: 1em;
+        }
+    }
+
+    &__subheading {
+        text-transform: uppercase;
+        font-size: 1.3rem;
+        color: #85929F;
+        letter-spacing: .1em;
+        text-align: center;
+    }
+
+    &__link {
+        display: block;
+        text-align: center;
+        font-size: 1.3rem;
+        color: $c11;
+        text-decoration: underline;
     }
 
     &__text-wrap {
@@ -32,9 +57,17 @@
     }
 
     &__btn-wrap {
+        margin-top: 4rem;
+        display: flex;
+        justify-content: center;
+    }
+
+    &__input-wrap {
         margin-top: 3.6rem;
         display: flex;
         justify-content: center;
+        flex-direction: column;
+        align-items: center;
     }
 
     &__btn {
