--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @import 'components/user-list';
 @import 'components/modal-general';
 @import 'components/context-menu';
+@import 'components/notifications';
 
 
 
