--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,8 @@
 @import 'components/modal-general';
 @import 'components/context-menu';
 @import 'components/notifications';
+@import 'components/modal-tabbed';
+@import 'components/restore-tasks';
 
 
 
