--- a/src/scss/_var.scss
+++ b/src/scss/_var.scss
@@ -29,4 +29,13 @@ $c12: #1EC4EE;
 $c13: #04162E;
 $c14: #EDEDED;
 
+$c15: #F53A53;
+$c16: #F49700;
+$c17: #F3EA00;
+$c18: #68DE0C;
+$c19: #17E7A6;
+$c20: #19C3EE;
+$c21: #2259D9;
+$c22: #D300D8;
+
 
