--- a/src/scss/global/_inputs.scss
+++ b/src/scss/global/_inputs.scss
@@ -1,5 +1,6 @@
 input[type=text],
 input[type=email] {
+    font-family: 'Montserrat', sans-serif;
     max-width: 28rem;
     width: 100%;
     padding: .75em 0;
