--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,7 @@
 @import 'components/notifications';
 @import 'components/modal-tabbed';
 @import 'components/restore-tasks';
+@import 'components/general-settings';
 
 
 
