--- a/src/scss/components/_modal-tabbed.scss
+++ b/src/scss/components/_modal-tabbed.scss
@@ -39,7 +39,7 @@
     &__tab {
         display: none;
         background-color: $c1;
-        padding: 2rem;
+        padding: 4rem 2rem;
         &[aria-hidden='false'] {
             display: block;
         }
