--- a/src/scss/global/_btn.scss
+++ b/src/scss/global/_btn.scss
@@ -13,6 +13,11 @@
     font-weight: 400;
     transition: all .3s;
 
+    &--disabled {
+        opacity: .5;
+        cursor: default;
+    }
+
     &--gradient {
         color: $c1;
         background-image: $gr1;
