--- a/src/scss/global/_header.scss
+++ b/src/scss/global/_header.scss
@@ -20,6 +20,15 @@
         font-size: 2.4rem;
         margin-bottom: 0;
         font-weight: 400;
+        a {
+            text-decoration: none;
+        }
+        &--standalone {
+            margin-bottom: 4rem;
+            &:after {
+                display: none !important;
+            }
+        }
         &:after {
             content: '';
             display: inline-block;
